tests/errors/header/unexpected_expr2 2.s
.name b a "kroz"a b
.comment "Hello, i'm Kroz"

live %1
